feature(p2p): graceful shutdown

--- a/src/worker/config/functional_testing.yml
+++ b/src/worker/config/functional_testing.yml
@@ -1,8 +1,6 @@
 app:
-  logging.development: true
   cron:
     jobs:
       SelfIntroductionJob:
         expression: "@every 2s"
-  p2p:
-    port: 5555
+        disable: true
