--- a/src/worker/config/testing.yml
+++ b/src/worker/config/testing.yml
@@ -1,2 +1,10 @@
 app:
+  port: 8000
   logging.development: true
+  cron:
+    jobs:
+      SelfIntroductionJob:
+        expression: "@every 2s"
+        disable: true
+  p2p:
+    broadcastPort: 5555
