--- a/src/worker/config/testing.yml
+++ b/src/worker/config/testing.yml
@@ -8,3 +8,9 @@ app:
         disable: true
   p2p:
     broadcastPort: 5555
+
+  consensus:
+    n: 200 # wait until reach a minimum number of participants to start
+    k: 20 #(sample size): between 1 and n
+    alpha: 14 #(quorum size): between 1 and k
+    beta: 20 #(decision threshold): >= 1
