--- a/src/worker/config/prod.yml
+++ b/src/worker/config/prod.yml
@@ -1,5 +1,19 @@
 app:
+  port: 8000
+  logging.development: true
   cron:
     jobs:
-      SelfIntroductionJob:
-        expression: "@every 2s"
+      selfIntroductionJob:
+        expression: "@every 5s"
+      fetchTransactionJob:
+        expression: "@every 500ms"
+  p2p:
+    broadcastPort: 5555
+    minConnectedNodes: 15 # (n) wait until reach a minimum number of participants to start
+  consensus:
+    k: 8 #(sample size): between 1 and n
+    alpha: 6 #(quorum size): between 1 and k
+    beta: 6 #(decision threshold): >= 1
+    timeout: "10s" # max duration to collect other nodes preferences
+  random:
+    range: 2
