--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,5 +24,6 @@ services:
     volumes:
       - .:/go/src/avalanche
     working_dir: /go/src/avalanche
+    command: sleep 1000000
     networks:
       - avalanche
