--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,44 @@
 version: '3.7'
+networks:
+  avalanche:
+    name: avalanche
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: 192.168.0.0/16
+
+services:
+  node:
+    deploy:
+      replicas: 25
+      resources:
+        limits:
+          memory: "100M"
+        reservations:
+          memory: "10M"
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        - MODULE=worker
+    environment:
+      APP_PROFILES: prod
+      APP_PATH: /
+    networks:
+      - avalanche
+  client_node:
+    image: "sonntuet1997/avalanche-client_node:latest"
+    build:
+      dockerfile: Dockerfile
+      target: base_with_mod
+      args:
+        - MODULE=worker
+    volumes:
+      - .:/go/src/avalanche
+    working_dir: /go/src/avalanche
+    command: sleep 1000000
+    cap_add:
+      - NET_ADMIN
+    networks:
+      - avalanche
